k8s/udemy-microsrv-cluster/templates/udemy-microsrv-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: udemy-microsrv-gateway
  name: udemy-microsrv-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udemy-microsrv-gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: udemy-microsrv-gateway
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/udemy-microsrv/docker-images/udemy-microsrv-gateway
        name: udemy-microsrv-gateway
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
status: {}
