k8s/udemy-microsrv-cluster/templates/udemy-microsrv-gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: udemy-microsrv-gateway
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: udemy-microsrv-gateway
            port:
              number: 3000
